--- a/live_demo.ipynb
+++ b/live_demo.ipynb
@@ -20,9 +20,8 @@
       "version": "3.6.9"
     },
     "colab": {
-      "name": "live_demo.ipynb의 사본",
+      "name": "live_demo.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -35,6 +34,60 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Kaping/jetbot_deeplearning/blob/main/live_demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9BMLfk6qOrym"
+      },
+      "source": [
+        "# Road Following - Live demo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sgsqycKvOryw"
+      },
+      "source": [
+        "In this notebook, we will use model we trained to move jetBot smoothly on track. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x44d4ZuXOryx"
+      },
+      "source": [
+        "### Load Trained Model"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Of9IrPHPOryy"
+      },
+      "source": [
+        "We will assume that you have already downloaded ``best_steering_model_xy.pth`` to work station as instructed in \"train_model.ipynb\" notebook. Now, you should upload model file to JetBot in to this notebooks's directory. Once that's finished there should be a file named ``best_steering_model_xy.pth`` in this notebook's directory."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AA3YhlxJOryy"
+      },
+      "source": [
+        "> Please make sure the file has uploaded fully before calling the next cell"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LKpw7ciPOryz"
+      },
+      "source": [
+        "Execute the code below to initialize the PyTorch model. This should look very familiar from the training notebook."
       ]
     },
     {
@@ -51,6 +104,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZQh1QyiCOry0"
+      },
+      "source": [
+        "Next, load the trained weights from the ``best_steering_model_xy.pth`` file that you uploaded."
+      ]
     },
     {
       "cell_type": "code",
@@ -78,6 +140,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5JPI8qU5Ory3"
+      },
+      "source": [
+        "Currently, the model weights are located on the CPU memory execute the code below to transfer to the GPU device."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Zlht5MvAOry3"
@@ -89,6 +160,29 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CUY3Mx--Ory4"
+      },
+      "source": [
+        "### Creating the Pre-Processing Function"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jps7JD4AOry4"
+      },
+      "source": [
+        "We have now loaded our model, but there's a slight issue. The format that we trained our model doesnt exactly match the format of the camera. To do that, we need to do some preprocessing. This involves the following steps:\n",
+        "\n",
+        "1. Convert from HWC layout to CHW layout\n",
+        "2. Normalize using same parameters as we did during training (our camera provides values in [0, 255] range and training loaded images in [0, 1] range so we need to scale by 255.0\n",
+        "3. Transfer the data from CPU memory to GPU memory\n",
+        "4. Add a batch dimension"
+      ]
     },
     {
       "cell_type": "code",
@@ -113,6 +207,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ifCMXl59Ory5"
+      },
+      "source": [
+        "Awesome! We've now defined our pre-processing function which can convert images from the camera format to the neural network input format.\n",
+        "\n",
+        "Now, let's start and display our camera. You should be pretty familiar with this by now. "
+      ]
     },
     {
       "cell_type": "code",
@@ -160,6 +265,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3gui1kffOry6"
+      },
+      "source": [
+        "We'll also create our robot instance which we'll need to drive the motors."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Tg0K6WB7Ory6"
@@ -171,6 +285,54 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7sASrG3XOry7"
+      },
+      "source": [
+        "Now, we will define sliders to control JetBot\n",
+        "> Note: We have initialize the slider values for best known configurations, however these might not work for your dataset, therefore please increase or decrease the sliders according to your setup and environment\n",
+        "\n",
+        "1. Speed Control (speed_gain_slider): To start your JetBot increase ``speed_gain_slider`` \n",
+        "2. Steering Gain Control (steering_gain_sloder): If you see JetBot is woblling, you need to reduce ``steering_gain_slider`` till it is smooth\n",
+        "3. Steering Bias control (steering_bias_slider): If you see JetBot is biased towards extreme right or extreme left side of the track, you should control this slider till JetBot start following line or track in the center.  This accounts for motor biases as well as camera offsets\n",
+        "\n",
+        "> Note: You should play around above mentioned sliders with lower speed to get smooth JetBot road following behavior."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "djIgJ16tOry7"
+      },
+      "source": [
+        "\"\"\"\n",
+        "speed_gain_slider = ipywidgets.FloatSlider(min=0.25, max=1.0, step=0.01, description='speed gain')\n",
+        "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.05, description='steering gain')\n",
+        "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=0.0, description='steering kd')\n",
+        "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias')\n",
+        "\"\"\"\n",
+        "speed_gain_slider = ipywidgets.FloatSlider(min=0.25, max=1.0, step=0.01, description='speed gain')\n",
+        "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.2, description='steering gain')\n",
+        "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=0.0, description='steering kd')\n",
+        "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias')\n",
+        "\n",
+        "display(speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yRKH6UNEOry8"
+      },
+      "source": [
+        "Next, let's display some sliders that will let us see what JetBot is thinking.  The x and y sliders will display the predicted x, y values.\n",
+        "\n",
+        "The steering slider will display our estimated steering value.  Please remember, this value isn't the actual angle of the target, but simply a value that is\n",
+        "nearly proportional.  When the actual angle is ``0``, this will be zero, and it will increase / decrease with the actual angle.  "
+      ]
     },
     {
       "cell_type": "code",
@@ -328,6 +490,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SW0vyZAEOry9"
+      },
+      "source": [
+        "Next, we'll create a function that will get called whenever the camera's value changes. This function will do the following steps\n",
+        "\n",
+        "1. Pre-process the camera image\n",
+        "2. Execute the neural network\n",
+        "3. Compute the approximate steering value\n",
+        "4. Control the motors using proportional / derivative control (PD)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "28MQyRxWOry-",
@@ -360,8 +536,8 @@
         "      robot.left_motor.value = max(min(speed_slider.value + steering_slider.value , 1.0)* 0.95, 0.0)\n",
         "      robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0)* 0.95, 0.0)\n",
         "    else:  \n",
-        "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value , 1.0)* 0.95, 0.0)\n",
-        "    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0)* 0.95, 0.0)\n",
+        "      robot.left_motor.value = max(min(speed_slider.value + steering_slider.value , 1.0)* 0.95, 0.0)\n",
+        "      robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0)* 0.95, 0.0)\n",
         "    \n",
         "execute({'new': camera.value})\n",
         "# robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
